files/etc_iptables
# Generated by Ansible
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [1:285]
-A INPUT -p tcp -m state --dport 25 --state NEW -j ACCEPT
-A INPUT -p tcp -m state --dport 22 --state NEW -j ACCEPT
-A INPUT -p udp -m state --dport 68 --state NEW -j ACCEPT
-A INPUT -p udp -m state --dport 323 --state NEW -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 127.0.0.0/8 -j DROP
-A INPUT -p tcp -m state --state ESTABLISHED -j ACCEPT
-A INPUT -p udp -m state --state ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p tcp -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p icmp -m state --state NEW,ESTABLISHED -j ACCEPT
COMMIT
# end of file
